--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Лендинг</title>
+<title>ПротоДизайн</title>
 <style>
   /* Основные цвета */
   :root {
@@ -25,7 +25,7 @@
   header {
     position: relative;
     height: 300px;
-    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('header-bg.jpg') center/cover no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('kiproto-header-bg.jpg') center/cover no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -88,40 +88,78 @@
 <body>
 
 <header>
-  <img src="logo.png" alt="Логотип" class="logo">
-  <h1>Короткий слоган</h1>
-  <p>Умеренно короткое описание курсивом, раскрывающее суть продукта или услуги.</p>
+  <!--img src="logo.png" alt="Логотип" class="logo"-->
+  <h1>От идеи до готового изделия</h1>
+  <p>Вы определяете задачу — мы превращаем её в работающий объект. По образцу и с нуля.</p>
 </header>
 
 <section class="contacts">
-  <a href="#"><svg><!-- tg icon --></svg>Telegram</a>
-  <a href="#"><svg><!-- whatsapp icon --></svg>WhatsApp</a>
-  <a href="mailto:example@mail.com"><svg><!-- email icon --></svg>Email</a>
-  <a href="tel:+123456789"><svg><!-- phone icon --></svg>+1 234 567 89</a>
+  <a href="https://t.me/razburo"><svg><img src="icon-tg.png"></svg></a>
+  <a href="https://api.whatsapp.com/send/?phone=79257711073&type=phone_number"><svg><<img src="icon-whatsapp.png">></svg></a>
+  <a href="mailto:the.ki@ya.ru"><svg><img src="icon-mail.png"></svg></a>
+  <a href="tel:+79257711073"><svg><img src="icon-phone.png"></svg></a>
 </section>
 
 <section class="steps">
   <div class="step">
     <svg><!-- icon 1 --></svg>
     <div class="step-content">
-      <h3>Шаг 1</h3>
-      <p>Описание первого шага взаимодействия с клиентом.</p>
+      <h3>Шаг 1. Первый контакт</h3>
+      <p>Клиент описывает задачу в свободной форме.
+        <br>Можно приложить фото, эскиз или пример изделия.</p>
     </div>
   </div>
 
   <div class="step">
     <svg><!-- icon 2 --></svg>
     <div class="step-content">
-      <h3>Шаг 2</h3>
-      <p>Описание второго шага взаимодействия с клиентом.</p>
+      <h3>Шаг 2. Анализ задачи</h3>
+      <p>Фиксируются ключевые параметры: цель, размеры, материалы, сроки.
+        <br>При необходимости делается предварительный набросок.</p>
     </div>
   </div>
 
   <div class="step">
     <svg><!-- icon 3 --></svg>
     <div class="step-content">
-      <h3>Шаг 3</h3>
-      <p>Описание третьего шага взаимодействия с клиентом.</p>
+      <h3>Шаг 3. Предложение решения</h3>
+      <p>Готовится рабочее предложение: что будет сделано, из чего, в какие сроки и в каком порядке.
+        <br>Для сложных проектов процесс разбивается на этапы.</p>
+    </div>
+  </div>
+
+  <div class="step">
+    <svg><!-- icon 3 --></svg>
+    <div class="step-content">
+      <h3>Шаг 4. Закрепление решения</h3>
+      <p>После согласования деталей фиксируется объём работы и порядок оплаты.
+        <br>Возможны разные варианты: поэтапная оплата, пробный заказ или полная предоплата.</p>
+    </div>
+  </div>
+
+  <div class="step">
+    <svg><!-- icon 3 --></svg>
+    <div class="step-content">
+      <h3>Шаг 5. Работа над проектом</h3>
+      <p>Процесс разбивается на шаги с промежуточной демонстрацией результата (эскизы, 3D-модели, прототипы).
+        <br>Клиент видит ход работы и может вносить корректировки.</p>
+    </div>
+  </div>
+
+  <div class="step">
+    <svg><!-- icon 3 --></svg>
+    <div class="step-content">
+      <h3>Шаг 6. Готовое изделие</h3>
+      <p>Изделие передаётся заказчику в согласованной форме (доставка, самовывоз).
+        <br>При необходимости прилагаются инструкции и рекомендации по эксплуатации.</p>
+    </div>
+  </div>
+
+  <div class="step">
+    <svg><!-- icon 3 --></svg>
+    <div class="step-content">
+      <h3>Шаг 7. Поддержка после передачи</h3>
+      <p>Доступна постпроектная поддержка: доработки, новые версии, повторные заказы.</p>
     </div>
   </div>
 </section>
