--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   header {
     position: relative;
     height: 300px;
-    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('kiproto-header-bg.jpg') center/cover no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('kiproto-header-bg.jpg') center/cover no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -94,10 +94,10 @@
 </header>
 
 <section class="contacts">
-  <a href="https://t.me/razburo"><svg><img src="icon-tg.png"></svg></a>
-  <a href="https://api.whatsapp.com/send/?phone=79257711073&type=phone_number"><svg><<img src="icon-whatsapp.png">></svg></a>
-  <a href="mailto:the.ki@ya.ru"><svg><img src="icon-mail.png"></svg></a>
-  <a href="tel:+79257711073"><svg><img src="icon-phone.png"></svg></a>
+  <a href="https://t.me/razburo"><_svg><img src="icon-tg.png"></_svg></a>
+  <a href="https://api.whatsapp.com/send/?phone=79257711073&type=phone_number"><_svg><<img src="icon-whatsapp.png">></_svg></a>
+  <a href="mailto:the.ki@ya.ru"><_svg><img src="icon-mail.png"></_svg></a>
+  <a href="tel:+79257711073"><_svg><img src="icon-phone.png"></_svg></a>
 </section>
 
 <section class="steps">
