--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 <section class="contacts">
   <a href="https://t.me/razburo"><_svg><img src="icon-tg.png"></_svg></a>
-  <a href="https://api.whatsapp.com/send/?phone=79257711073&type=phone_number"><_svg><<img src="icon-whatsapp.png">></_svg></a>
+  <a href="https://api.whatsapp.com/send/?phone=79257711073&type=phone_number"><_svg><img src="icon-whatsapp.png"></_svg></a>
   <a href="mailto:the.ki@ya.ru"><_svg><img src="icon-mail.png"></_svg></a>
   <a href="tel:+79257711073"><_svg><img src="icon-phone.png"></_svg></a>
 </section>
