--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ПротоДизайн</title>
+<title>Прото-Дизайн</title>
 <style>
   /* Основные цвета */
   :root {
@@ -25,7 +25,7 @@
   header {
     position: relative;
     height: 300px;
-    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('kiproto-header-bg.jpg') center/cover no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('kiproto-header-bg.jpg') center/cover no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
