--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <header>
   <!--img src="logo.png" alt="Логотип" class="logo"-->
   <h1>От идеи до готового изделия</h1>
-  <p>Вы определяете задачу — мы превращаем её в работающий объект. По образцу и с нуля.</p>
+  <p>Вы определяете задачу — мы превращаем её в работающий объект.<br>По образцу и с нуля.</p>
 </header>
 
 <section class="contacts">
