--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   header {
     position: relative;
     height: 300px;
-    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('kiproto-header-bg.jpg') center/cover no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('kiproto-header-bg.jpg') center/cover no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -90,7 +90,7 @@
 <header>
   <!--img src="logo.png" alt="Логотип" class="logo"-->
   <h1>От идеи до готового изделия</h1>
-  <p>Вы определяете задачу — мы превращаем её в работающий объект.<br>По образцу и с нуля.</p>
+  <p>Вы определяете задачу — мы превращаем её в работающий объект.<br>По образцу, чертежу, эскизу или со слов.</p>
 </header>
 
 <section class="contacts">
