--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   header {
     position: relative;
     height: 300px;
-    background: linear-gradient(rgba(1,0.4,0.8,0.6), rgba(1,0.4,0.8,0.9)), url('kiproto-header-bg.jpg') center/cover no-repeat;
+    background: linear-gradient(rgba(1,0.4,0.8,0.5), rgba(1,0.4,0.8,0.7)), url('kiproto-header-bg.jpg') center/cover no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,7 +54,7 @@
     color: var(--accent-color);
   }
 
-  .contacts a svg { width: 40px; height: 40px; margin-bottom: 8px; }
+  .contacts a svg { width: 30px; height: 30px; margin-bottom: 8px; }
 
   /* Инфографика */
   .steps {
@@ -90,11 +90,11 @@
 <header>
   <!--img src="logo.png" alt="Логотип" class="logo"-->
   <h1>От идеи до готового изделия</h1>
-  <p>Вы определяете задачу — мы превращаем её в работающий объект.<br>По образцу, чертежу, эскизу или со слов.</p>
+  <p>Вы определяете задачу — <br>мы превращаем её в работающий объект.<br>По образцу, чертежу, эскизу или со слов.</p>
 </header>
 
 <section class="contacts">
-  <a href="https://t.me/razburo"><img src="icon-tg.png"></a>
+  <a href="https://t.me/ki_privet"><img src="icon-tg.png"></a>
   <a href="https://api.whatsapp.com/send/?phone=79257711073&type=phone_number"><img src="icon-whatsapp.png"></a>
   <a href="mailto:the.ki@ya.ru"><img src="icon-mail.png"></a>
   <a href="tel:+79257711073"><img src="icon-phone.png"></a>
