--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Прото-Дизайн</title>
+<title>Прото и Дизайн</title>
 <style>
   /* Основные цвета */
   :root {
@@ -25,7 +25,7 @@
   header {
     position: relative;
     height: 300px;
-    background: linear-gradient(rgba(1,0.4,0.8,1), rgba(1,0.4,0.8,1)), url('kiproto-header-bg.jpg') center/cover no-repeat;
+    background: linear-gradient(rgb(1,0.4,0.8), rgb(1,0.4,0.8)), url('kiproto-header-bg.jpg') center/cover no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
