--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   header {
     position: relative;
     height: 300px;
-    background: linear-gradient(rgb(1,0.4,0.8), rgb(1,0.4,0.8)), url('kiproto-header-bg.jpg') center/cover no-repeat;
+    background: linear-gradient(rgba(1,0.4,0.8,.7), rgba(1,0.4,0.8,.7)), url('kiproto-header-bg.jpg') center/cover no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,8 +49,7 @@
   .contacts a {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    font-size: 0.9em;
+    align-items: center;    font-size: 0.9em;
     color: var(--accent-color);
   }
 
@@ -89,8 +88,8 @@
 
 <header>
   <!--img src="logo.png" alt="Логотип" class="logo"-->
-  <h1>От идеи до готового изделия</h1>
-  <p>Вы определяете задачу — <br>мы превращаем её в работающий объект.<br>По образцу, чертежу, эскизу или со слов.</p>
+  <h1>Hеверс-инжиниринг, проектирование и изготовление</h1>
+  <p>Вы определяете задачу — <br>мы превращаем её в работающий объект.<br><br>По образцу, чертежу, эскизу или со слов.</p>
 </header>
 
 <section class="contacts">
