--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <header>
   <!--img src="logo.png" alt="Логотип" class="logo"-->
-  <h1>Hеверс-инжиниринг, проектирование и изготовление</h1>
+  <h1>Реверс-инжиниринг, проектирование и изготовление</h1>
   <p>Вы определяете задачу — <br>мы создаем работающий объект.<br><br>По образцу, чертежу, эскизу или со слов.</p>
 </header>
 
