--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <header>
   <!--img src="logo.png" alt="Логотип" class="logo"-->
   <h1>Реверс-инжиниринг, проектирование и изготовление</h1>
-  <p>Вы определяете задачу — мы создаем работающее изделие.<br><br>По образцу, чертежу, эскизу или со слов.</p>
+  <p>Вы определяете задачу — мы создаем готовое изделие.<br><br>По образцу, чертежу, эскизу или со слов.</p>
 </header>
 
 <section class="contacts">
