--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <section class="contacts">
   <a href="https://t.me/ki_privet"><img src="icon-tg.png"></a>
   <a href="https://api.whatsapp.com/send/?phone=79257711073&type=phone_number"><img src="icon-whatsapp.png"></a>
-  <a href="mailto:the.ki@ya.ru"><img src="icon-mail.png"></a>
+  <a href="mailto:proto-design@kiproto.ru"><img src="icon-mail.png"></a>
   <a href="tel:+79257711073"><img src="icon-phone.png"></a>
 </section>
 
