--- a/index.html
+++ b/index.html
@@ -82,6 +82,90 @@
     .steps { padding: 40px 10px; }
     .step { flex-direction: column; align-items: center; text-align: center; }
   }
+
+
+  /* Галерея */
+  .gallery {
+    max-width: 1000px;
+    margin: 60px auto;
+    padding: 0 20px;
+  }
+
+  .gallery h2 {
+    color: var(--accent);
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 2em;
+  }
+
+  .gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 20px;
+  }
+
+  .gallery-item {
+    position: relative;
+    overflow: hidden;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    cursor: pointer;
+  }
+
+  .gallery-item img {
+    width: 100%;
+    display: block;
+    transition: transform 0.4s ease, filter 0.4s ease;
+  }
+
+  .gallery-item:hover img {
+    transform: scale(1.08);
+    filter: brightness(1.1) saturate(1.2);
+  }
+
+  /* Лайтбокс */
+  .lightbox {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.9);
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn 0.3s ease;
+  }
+
+  .lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 12px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    animation: zoomIn 0.3s ease;
+  }
+
+  .lightbox .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 2.5em;
+    color: var(--accent);
+    cursor: pointer;
+    transition: transform 0.2s ease;
+  }
+
+  .lightbox .close:hover {
+    transform: scale(1.2);
+  }
+
+  @keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
+
+  @keyframes zoomIn {
+    from { transform: scale(0.8); opacity: 0; }
+    to { transform: scale(1); opacity: 1; }
+  }  
 </style>
 </head>
 <body>
@@ -99,7 +183,44 @@
   <a href="tel:+79257711073"><img src="icon-phone.png"></a>
 </section>
 
-<section class="steps">
+  <!-- Фото-галерея -->
+  <section class="gallery">
+    <h2>Галерея</h2>
+    <div class="gallery-grid">
+      <div class="gallery-item">
+        <img src="https://via.placeholder.com/400x250" alt="Фото 1" onclick="openLightbox(this)">
+      </div>
+      <div class="gallery-item">
+        <img src="https://via.placeholder.com/400x250" alt="Фото 2" onclick="openLightbox(this)">
+      </div>
+      <div class="gallery-item">
+        <img src="https://via.placeholder.com/400x250" alt="Фото 3" onclick="openLightbox(this)">
+      </div>
+      <div class="gallery-item">
+        <img src="https://via.placeholder.com/400x250" alt="Фото 4" onclick="openLightbox(this)">
+      </div>
+    </div>
+  </section>
+
+  <!-- Лайтбокс -->
+  <div id="lightbox" class="lightbox" onclick="closeLightbox()">
+    <span class="close">&times;</span>
+    <img class="lightbox-content" id="lightbox-img">
+  </div>
+
+  <script>
+    function openLightbox(img) {
+      document.getElementById("lightbox").style.display = "flex";
+      document.getElementById("lightbox-img").src = img.src;
+    }
+
+    function closeLightbox() {
+      document.getElementById("lightbox").style.display = "none";
+    }
+  </script>
+  
+  
+  <section class="steps">
   <div class="step">
     <svg><!-- icon 1 --></svg>
     <div class="step-content">
