--- a/index.html
+++ b/index.html
@@ -188,17 +188,24 @@
     <h2>Галерея</h2>
     <div class="gallery-grid">
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/400x250" alt="Фото 1" onclick="openLightbox(this)">
+        <img src="/photo1.jpg" alt="Фото 1" onclick="openLightbox(this)">
       </div>
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/400x250" alt="Фото 2" onclick="openLightbox(this)">
+        <img src="/photo2.jpg" alt="Фото 2" onclick="openLightbox(this)">
       </div>
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/400x250" alt="Фото 3" onclick="openLightbox(this)">
+        <img src="/photo3.jpg" alt="Фото 3" onclick="openLightbox(this)">
       </div>
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/400x250" alt="Фото 4" onclick="openLightbox(this)">
+        <img src="/photo4.jpg" alt="Фото 4" onclick="openLightbox(this)">
       </div>
+      <div class="gallery-item">
+        <img src="/photo5.jpg" alt="Фото 4" onclick="openLightbox(this)">
+      </div>
+      <div class="gallery-item">
+        <img src="/photo6.jpg" alt="Фото 4" onclick="openLightbox(this)">
+      </div>
+
     </div>
   </section>
 
