--- a/index.html
+++ b/index.html
@@ -205,6 +205,15 @@
       <div class="gallery-item">
         <img src="/photo6.jpg" alt="Фото 4" onclick="openLightbox(this)">
       </div>
+      <div class="gallery-item">
+        <img src="/photo7.jpg" alt="Фото 4" onclick="openLightbox(this)">
+      </div>
+      <div class="gallery-item">
+        <img src="/photo8.jpg" alt="Фото 4" onclick="openLightbox(this)">
+      </div>
+      <div class="gallery-item">
+        <img src="/photo9.jpg" alt="Фото 4" onclick="openLightbox(this)">
+      </div>
 
     </div>
   </section>
