--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Прото и Дизайн</title>
+<title>Прототипирование и Функциональный дизайн</title>
 <style>
   /* Основные цвета */
   :root {
@@ -172,8 +172,8 @@
 
 <header>
   <!--img src="logo.png" alt="Логотип" class="logo"-->
-  <h1>Реверс-инжиниринг, проектирование и изготовление</h1>
-  <p>Вы определяете задачу — мы создаем готовое изделие.<br><br>По образцу, чертежу, эскизу или со слов.</p>
+  <h1>Прототипирование и Функциональный дизайн</h1>
+  <p>Вы определяете задачу — мы создаем готовое изделие.<br><br>По образцу, чертежу, эскизу или описанию.</p>
 </header>
 
 <section class="contacts">
