--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <body>
 
 <header>
-  <!--img src="logo.png" alt="Логотип" class="logo"-->
+  <img src="logo-razburo.png" alt="Логотип" class="logo">
   <h1>Прототипирование и Функциональный дизайн</h1>
   <p>Вы определяете задачу — мы создаем готовое изделие.<br><br>По образцу, чертежу, эскизу или описанию.</p>
 </header>
