--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 
 <header>
   <img src="logo-razburo.png" alt="Proto&Des" class="logo">
-  <h1>Прототипирование и Функциональный дизайн</h1>
-  <p>Вы определяете задачу — мы создаем готовое изделие.<br><br>По образцу, чертежу, эскизу или описанию.</p>
+  <h1>Прототипирование<br>и Функциональный дизайн</h1>
+  <p>Вы определяете задачу — мы создаем готовое изделие.<br>По образцу, чертежу, эскизу или описанию.</p>
 </header>
 
 <section class="contacts">
