--- a/index.html
+++ b/index.html
@@ -167,6 +167,21 @@
     to { transform: scale(1); opacity: 1; }
   }  
 </style>
+
+
+
+<!-- Open Graph (для мессенджеров и соцсетей) -->
+  <meta property="og:title" content="Прототипирование и Функциональный дизайн">
+  <meta property="og:description" content="Вы определяете задачу — мы создаем готовое изделие.">
+  <meta property="og:image" content="https://kiproto.ru/OG-shot.jpg">
+  <meta property="og:url" content="https://kiproto.ru/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Cards (для X/Twitter) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Прототипирование и Функциональный дизайн">
+  <meta name="twitter:description" content="Вы определяете задачу — мы создаем готовое изделие.">
+  <meta name="twitter:image" content="https://kiproto.ru/OG-shot.jpg">  
 </head>
 <body>
 
