--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     text-align: center;
   }
 
-  header img.logo { width: 100px; margin-bottom: 10px; align-items: left; }
+  header img.logo { width: 50px; margin-bottom: 10px; position: absolute; left:15 }
   header h1 { color: var(--accent-color); margin: 0; font-size: 2em; }
   header p { font-style: italic; max-width: 500px; }
 
