--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 
   /* Блок контактов */
   .contacts {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    
     display: flex;
     justify-content: center;
     gap: 40px;
