--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 <!-- Open Graph (для мессенджеров и соцсетей) -->
   <meta property="og:title" content="Прототипирование и Функциональный дизайн">
   <meta property="og:description" content="Вы определяете задачу — мы создаем готовое изделие.">
-  <meta property="og:image" content="https://kiproto.ru/OG-shot.jpg">
+  <meta property="og:image" content="https://kiproto.ru/OG-shot.jpg?v=2">
   <meta property="og:url" content="https://kiproto.ru/">
   <meta property="og:type" content="website">
 
